:zap: Gradio tutorial links

--- a/UI/gradio.ipynb
+++ b/UI/gradio.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gradio Tutorial\n",
+    "* [Video](https://www.youtube.com/watch?v=RiCQzBluTxU)\n",
+    "* [Github](https://github.com/gradio-app/gradio)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
