:zap: Update Gradio examples notebook

--- a/UI/gradio.ipynb
+++ b/UI/gradio.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,11 +1419,193 @@
     "# If you don't want to launch the app in jupyter lab\n",
     "# launch(inline=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Webcam Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7869/\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://127.0.0.1:7869/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f7788f44730>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<fastapi.applications.FastAPI at 0x7f77a8b599a0>,\n",
+       " 'http://127.0.0.1:7869/',\n",
+       " None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def snap(image):\n",
+    "    return np.flipud(image)\n",
+    "\n",
+    "\n",
+    "iface = gr.Interface(snap, gr.inputs.Image(source=\"webcam\", tool=None), \"image\")\n",
+    "iface.launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image Classification Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import gradio as gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7860/\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://127.0.0.1:7860/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f77613e7e80>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<fastapi.applications.FastAPI at 0x7f77a8b599a0>,\n",
+       " 'http://127.0.0.1:7860/',\n",
+       " None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def discoloration_classifier(img, threshold):\n",
+    "    blur_image = cv2.blur(img, (5, 5))\n",
+    "\n",
+    "    hsv_blur_img = cv2.cvtColor(blur_image, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "    mask = cv2.inRange(hsv_blur_img, light, dark)\n",
+    "\n",
+    "    white_part = cv2.countNonZero(mask)\n",
+    "    # Total num\n",
+    "    w, h = np.shape(mask)\n",
+    "    tot_pix = w * h\n",
+    "    # Percentage of rectangle filled with food\n",
+    "    white_percentage = (white_part / tot_pix) * 100\n",
+    "    \n",
+    "    if white_percentage > threshold:\n",
+    "        label = \"Not Good\"\n",
+    "    else:\n",
+    "        label = \"Good\"\n",
+    "        \n",
+    "    return mask, round(white_percentage, 2), label\n",
+    "\n",
+    "iface = gr.Interface(discoloration_classifier,\n",
+    "                     inputs=[\n",
+    "                         gr.inputs.Image(label=\"Input Image\"),\n",
+    "                         gr.inputs.Slider(1, 20, label=\"Threshold\", default=10)],\n",
+    "                     outputs=[\n",
+    "                         gr.outputs.Image(label=\"Mask Image\"),\n",
+    "                         gr.outputs.Textbox(label=\"Whiteness percentage\"),\n",
+    "                         gr.outputs.Textbox(label=\"Class\")],\n",
+    "                     title=\"Maitake Color Classifcation\",\n",
+    "                     theme=\"dark-huggingface\")\n",
+    "iface.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
