--- a/UI/gradio.ipynb
+++ b/UI/gradio.ipynb
@@ -1514,50 +1514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7860/\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+     "ename": "NameError",
+     "evalue": "name 'gr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16820\\3559450274.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwhite_percentage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m iface = gr.Interface(discoloration_classifier,\n\u001b[0m\u001b[0;32m     23\u001b[0m                      inputs=[\n\u001b[0;32m     24\u001b[0m                          \u001b[0mgr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Input Image\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gr' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900\"\n",
-       "            height=\"500\"\n",
-       "            src=\"http://127.0.0.1:7860/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f77613e7e80>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<fastapi.applications.FastAPI at 0x7f77a8b599a0>,\n",
-       " 'http://127.0.0.1:7860/',\n",
-       " None)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1590,7 +1559,7 @@
     "                         gr.outputs.Image(label=\"Mask Image\"),\n",
     "                         gr.outputs.Textbox(label=\"Whiteness percentage\"),\n",
     "                         gr.outputs.Textbox(label=\"Class\")],\n",
-    "                     title=\"Maitake Color Classifcation\",\n",
+    "                     title=\"Classifcation\",\n",
     "                     theme=\"dark-huggingface\")\n",
     "iface.launch()"
    ]
@@ -1619,7 +1588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
