:zap: Python itertools completed

--- a/Python/itertools_python/itertools_module.ipynb
+++ b/Python/itertools_python/itertools_module.ipynb
@@ -857,16 +857,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "0e17e55d-baaa-46a9-a10f-2133e99cb86a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "letters = ['a', 'b', 'c', 'd']\n",
+    "numbers = [0, 1, 2, 3]\n",
+    "names = ['Corey', 'Nicole']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
-   "id": "cdc89807-c6e7-4b6f-80db-6924407ffec5",
+   "id": "26a1d227-6328-44ae-be61-c84624f35980",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Usual way: Inefficient\n",
-    "letters = ['a', 'b', 'c', 'd']\n",
-    "numbers = [0, 1, 2, 3]\n",
-    "names = ['Corey', 'Nicole']\n",
-    "\n",
     "combined_list = letters + numbers + names"
    ]
   },
@@ -902,12 +910,515 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "983cbd76-13c2-423a-a91f-917ce297f8f3",
+   "metadata": {},
+   "source": [
+    "## islice"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1b74bc6-f8f2-4446-afed-c589692f8c7d",
+   "execution_count": 3,
+   "id": "822533d8-5430-4d64-ab4f-2d63ccbf99c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = itertools.islice(range(10), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3dd76fb3-32dc-4329-975a-3c4e79d8e3cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5eaaa97a-a01c-4e67-8692-c91163a785c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With a starting argument\n",
+    "result = itertools.islice(range(10), 1, 5)\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bb77f013-6370-4dad-9f06-8c58af65d7b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With steps\n",
+    "result = itertools.islice(range(10), 1, 5, 2)\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1c48f353-9602-4b4d-a6ea-30f0007b1829",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date: 2018-11-08\n",
+      "Author: Corey\n",
+      "Description: This is a sample log file\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('test.log', 'r') as f:\n",
+    "    header = itertools.islice(f, 3)\n",
+    "    \n",
+    "    for line in header:\n",
+    "        print(line, end='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7305e48f-dce7-4aaa-ad1b-317ef7924f19",
+   "metadata": {},
+   "source": [
+    "## Compress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fdd5f0fd-0da2-4924-9b23-4c9cbec74507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selectors = [True, True, False, True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8a2cdb10-ed2a-4e53-af6e-77d6a0b87769",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = itertools.compress(letters, selectors)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc3c5c7f-0584-416a-beaa-21872215d18e",
+   "metadata": {},
+   "source": [
+    "Filter uses a function to determine whether something is true or not.\n",
+    "In compress, those values are passed in as an iterable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d4652fff-57c2-4552-9e95-2e4c3dce1d9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lt_2(n):\n",
+    "    if n < 2:\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b88a52aa-7549-40ed-8abb-ff3992a7dee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = filter(lt_2, numbers)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df552fce-7fa6-49de-848b-e9b7e074062a",
+   "metadata": {},
+   "source": [
+    "## FilterFalse\n",
+    "Similar to filter function, but it gives you the values that return False instead of True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4a71333f-e652-4065-a395-6843e7c18500",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = itertools.filterfalse(lt_2, numbers)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16482daa-e77f-4dd7-969e-6472546d1475",
+   "metadata": {},
+   "source": [
+    "## DropWhile\n",
+    "Drop values from an iterable until one of the values returns True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9c08cc8e-ae59-4b22-9978-b6163e11dcf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [0, 1, 2, 3, 2, 1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03456590-6aaf-47d5-93cb-17d1ddb2b007",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = itertools.dropwhile(lt_2, numbers)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7314b7f4-d229-4bd9-a0da-62c52b4d501a",
+   "metadata": {},
+   "source": [
+    "It stopped applying the value once the condition became true."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b57c2b0a-c6ba-453a-9806-ec9031d82860",
+   "metadata": {},
+   "source": [
+    "## TakeWhile\n",
+    "Will return the values which return true until it hits False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d9c9c1a4-95f2-4852-b2af-c8f58ed23739",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = itertools.takewhile(lt_2, numbers)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74cf4b0d-d9f9-4781-ad7d-ae925b19b462",
+   "metadata": {},
+   "source": [
+    "## Accumulate\n",
+    "Takes an iterable and returns accumulated sums of the values that it sees. Uses addition by default, but you can use other functions as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "25c89d70-902c-4152-b070-e87e11b20780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "8\n",
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = itertools.accumulate(numbers)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e969f904-06d3-4674-8642-87a11b9d925e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "12\n",
+      "12\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiply instead\n",
+    "import operator\n",
+    "numbers = [1, 2, 3, 2, 1, 0]\n",
+    "result = itertools.accumulate(numbers, operator.mul)\n",
+    "\n",
+    "for item in result:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "277b8224-cbeb-4737-a957-c10111b6b243",
+   "metadata": {},
+   "source": [
+    "## GroupBy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bcd7eac9-c17a-4491-bf39-8cf4358b7908",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "people = [\n",
+    "    {\n",
+    "        'name': 'John Doe',\n",
+    "        'city': 'Gotham',\n",
+    "        'state': 'NY'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Jane Doe',\n",
+    "        'city': 'Kings Landing',\n",
+    "        'state': 'NY'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Corey Schafer',\n",
+    "        'city': 'Boulder',\n",
+    "        'state': 'CO'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Al Einstein',\n",
+    "        'city': 'Denver',\n",
+    "        'state': 'CO'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'John Henry',\n",
+    "        'city': 'Hinton',\n",
+    "        'state': 'WV'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Randy Moss',\n",
+    "        'city': 'Rand',\n",
+    "        'state': 'WV'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Nicole K',\n",
+    "        'city': 'Asheville',\n",
+    "        'state': 'NC'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Jim Doe',\n",
+    "        'city': 'Charlotte',\n",
+    "        'state': 'NC'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Jane Taylor',\n",
+    "        'city': 'Faketown',\n",
+    "        'state': 'NC'\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1cb48331-6663-4bfe-8f0f-6857f2eeb9ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_state(person):\n",
+    "    return person['state']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "44ced47c-e281-4c62-b9ba-a84260d2ddb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NY 2\n",
+      "CO 2\n",
+      "WV 2\n",
+      "NC 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "person_group = itertools.groupby(people, get_state)\n",
+    "\n",
+    "for key, group in person_group:\n",
+    "    print(key, len(list(group)))\n",
+    "    # for person in group:\n",
+    "    #     print(person)\n",
+    "    # print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f07dbf4-9c7b-4633-8c07-df6a3170f1e6",
+   "metadata": {},
+   "source": [
+    "For groupby to work properly, the initial values need to be sorted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4146526a-9168-421b-865f-6a26b0fa079a",
+   "metadata": {},
+   "source": [
+    "## Tee\n",
+    "Replicating iterators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "86249415-1dc1-4aee-abea-0228037ba2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_group = itertools.groupby(people, get_state)\n",
+    "\n",
+    "copy1, copy2 = itertools.tee(person_group)"
+   ]
   }
  ],
  "metadata": {
@@ -926,7 +1437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
