:zap: :construction: Equipment failure prediction #wip

--- a/MLRecipes/FailurePrediction/equipment_failure.ipynb
+++ b/MLRecipes/FailurePrediction/equipment_failure.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "43da4ab0-9334-4110-932c-d1ed413f4daf",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "962f4bd3-0351-463d-a3cb-075a0895214b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8fe3e25a-cc49-4831-909c-6a05f3306f36",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f41d5b4a-2953-4574-83d7-43b6ef4a7957",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "4                  0  0.0               884  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "1e75ce76-ece7-4dcd-b9e6-29c1de8d578b",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "(307751, 16)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2f3b31ed-f0c2-4b12-a033-fe24c347714d",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "(421, 15)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "75e7e17d-194f-40d4-a955-2f575e2a8196",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "(731, 15)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ff6b30da-8fc3-44ed-9e2d-9b1ab795669f",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "(307751, 16)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2bfe3dab-c611-49ff-b7d9-d6cd740074ae",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "a7a9563d-04ee-41ba-8b3f-69f3b65a4299",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "1                     421"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "7dee27e1-8a71-4c39-acfc-2a214791c724",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
        "max      4151.700000           1.000000    2068.110000      15170.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4a563c20-97b9-4877-8d24-37bc19815c2c",
    "metadata": {},
    "outputs": [],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "911bdd66-5b0b-41c6-ae4b-095f8d49fb20",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
        "4                  0  0.0               884        0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "09e0ac98-cd26-4c8c-b799-ca52421abab1",
    "metadata": {},
    "outputs": [],
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "500bc88d-e8e3-48e4-8642-74e500fe1ee6",
    "metadata": {},
    "outputs": [],
@@ -991,17 +991,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41e2da41-5dd8-41d3-9491-606ec38f81c8",
+   "execution_count": 22,
+   "id": "6b062132-f2ca-4c85-b9e2-b5901d8c0365",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a running mean, max, min and median for the sensor variables.\n",
-    "dfx['S5_mean'] = np.where((dfx.too_soon == 0),\n",
-    "                          (dfx['S5'].rolling(min_periods=1, window=feature_window).mean(),\n",
-    "                           dfx.S5)\n",
-    "                          dfx"
+    "def create_mean(df, sensor):\n",
+    "    df[sensor+\"_mean\"] = np.where((df.too_soon == 0),\n",
+    "                          (df[sensor].rolling(min_periods=1, window=feature_window).mean()),\n",
+    "                           df[sensor])\n",
+    "    \n",
+    "def create_median(df, sensor):\n",
+    "    df[sensor+\"_median\"] = np.where((df.too_soon == 0),\n",
+    "                          (df[sensor].rolling(min_periods=1, window=feature_window).median()),\n",
+    "                           df[sensor])\n",
+    "    \n",
+    "def create_max(df, sensor):\n",
+    "    df[sensor+\"_max\"] = np.where((df.too_soon == 0),\n",
+    "                          (df[sensor].rolling(min_periods=1, window=feature_window).max()),\n",
+    "                           df[sensor])\n",
+    "    \n",
+    "def create_min(df, sensor):\n",
+    "    df[sensor+\"_min\"] = np.where((df.too_soon == 0),\n",
+    "                          (df[sensor].rolling(min_periods=1, window=feature_window).min()),\n",
+    "                           df[sensor])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b6854b52-cea2-40c4-9028-6f6cf742407b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_list = ['S5', 'S13', 'S15', 'S16', 'S17', 'S18', 'S19']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "60f749bb-6ba9-4782-8bbb-40373d2c92c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sensor in sensor_list:\n",
+    "    create_mean(dfx, sensor)\n",
+    "    create_median(dfx, sensor)\n",
+    "    create_max(dfx, sensor)\n",
+    "    create_min(dfx, sensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d10c5bc5-6509-4f11-9d1b-efc3210a4454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Look for sudden spikes in sensor values. This code creates a value indicating how far the current value is from the immediate norm.\n",
+    "def create_chg(df, sensor):\n",
+    "    df[sensor + \"_chg\"] = np.where((dfx[sensor+\"_mean\"] == 0), 0, dfx[sensor]/dfx[sensor+\"_mean\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "61e6d994-b236-4d2c-8eb5-cb34e194ce85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sensor in sensor_list:\n",
+    "    create_chg(dfx, sensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7cb5e989-9623-4a6e-b228-12b9e2f4e3af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd_data = dfx.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6dbbb6b-77ff-4f24-a039-d583330a08c8",
+   "metadata": {},
+   "source": [
+    "## Dealing with small number of failures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a04a39-c2c5-4f22-89f5-08090a6890ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
